# Koikatsu-Sunshine-Launcher

./: README.md  package-lock.json  package.json
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/fonts/: arabic_font  devanagari_font  georgian_font  thai_font
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  lib.txt  main.rs
