[package]
name = "KoikatsuSunshineLauncher"
version = "1.0.0"
description = "Koikatsu Sunshine Launcher"
authors = ["deadshark"]
edition = "2021"

[lib]
name = "koikatsusunshine_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }   # ← Así es correcto

tokio = { version = "1", features = ["sync"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-xml-rs = "0.8.2"
base64 = "0.22"
